--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ rust-version = "1.56"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytes = "1.1.0"
 prost = "0.9.0"
+
+[features]
