--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -21,7 +21,10 @@ jobs:
             ~/.cargo/git
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      - run: rustup install nightly && rustup default nightly
+      - run: |
+          rustup install nightly
+          rustup default nightly
+          rustc --version --verbose
       - run: rustup component add rustfmt
       - name: Cargo test
         run: cargo test
