--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -21,7 +21,10 @@ jobs:
             ~/.cargo/git
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      - run: rustup install 1.56.0 && rustup default stable
+      - run: |
+          rustup install 1.56.0
+          rustup default 1.56.0
+          rustc --version --verbose
       - run: rustup component add rustfmt
       - name: Cargo test
         run: cargo test
